--- a/pages/conclusion/conclusion.mdx
+++ b/pages/conclusion/conclusion.mdx
@@ -12,7 +12,7 @@ The machine learning features implemented in our e-commerce platform have shown 
 
 ## Features with GenAI
 
-### Product Description Suggestions
+### Product Description Suggestion
 
 Sellers can use the AI content generation feature by entering product hints and selecting **Gợi ý từ trợ lý AI**. The AI generates detailed
 descriptions from these hints.
@@ -30,11 +30,15 @@ AI will create detailed product descriptions from keywords provided by sellers. 
 Sellers can generate product images with virtual models by uploading images, selecting product types, and choosing model criteria before
 clicking **Bắt đầu**. They can also create and add images to their shop's collection.
 
-![Virtual Model Image Generation](/assets/chapter_5/5.2.png)
+![Virtual Model Image Generation](https://res.cloudinary.com/dgsrxvev1/image/upload/v1726416412/vagoda/Screenshot_2024-09-15_222659_exjvaw.png)
 
-![Virtual Model Image Generation](/assets/chapter_5/5.3.png)
+![Virtual Model Image Generation](https://res.cloudinary.com/dgsrxvev1/image/upload/v1726416412/vagoda/Screenshot_2024-09-15_223958_heglap.png)
 
-![Virtual Model Image Generation](/assets/chapter_5/5.4.png)
+![Virtual Model Image Generation](https://res.cloudinary.com/dgsrxvev1/image/upload/v1726416413/vagoda/Screenshot_2024-09-15_224044_zbzviu.png)
+
+![Virtual Model Image Generation](https://res.cloudinary.com/dgsrxvev1/image/upload/v1726416412/vagoda/Screenshot_2024-09-15_224130_fmzufw.png)
+
+![Virtual Model Image Generation](https://res.cloudinary.com/dgsrxvev1/image/upload/v1726416413/vagoda/Screenshot_2024-09-15_224208_xxcx7l.png)
 
 ### Virtual fitting room
 
@@ -43,13 +47,21 @@ select products from their cart.
 
 ![Virtual Model Image Generation](/assets/chapter_5/5.5.png)
 
-![Virtual Model Image Generation](/assets/chapter_5/5.6.png)
+![https://res.cloudinary.com/dgsrxvev1/image/upload/v1726416410/vagoda/Screenshot_2024-09-15_224611_ygn3nf.png)
 
-![Virtual Model Image Generation](/assets/chapter_5/5.7.png)
+![Virtual Model Image Generation](https://res.cloudinary.com/dgsrxvev1/image/upload/v1726416411/vagoda/Screenshot_2024-09-15_224654_m8k2fw.png)
 
 The AI will automatically generate realistic and vivid images of the customer wearing the selected products.
 
-![Virtual Model Image Generation](/assets/chapter_5/5.8.png)
+![Virtual Model Image Generation](https://res.cloudinary.com/dgsrxvev1/image/upload/v1726416411/vagoda/Screenshot_2024-09-15_224815_sjxlyi.png)
+
+Try on with a different body shape:
+
+![vto](https://res.cloudinary.com/dgsrxvev1/image/upload/v1726416410/vagoda/Screenshot_2024-09-15_224854_ozbwcs.png)
+
+![vto](https://res.cloudinary.com/dgsrxvev1/image/upload/v1726416410/vagoda/Screenshot_2024-09-15_224927_ot2c8r.png)
+
+![vto](https://res.cloudinary.com/dgsrxvev1/image/upload/v1726416413/vagoda/Screenshot_2024-09-15_224959_pmktlf.png)
 
 - **Usability**: User-friendly interface, easy to use. Customers can easily upload photos and select products to try, providing a convenient experience.
 - **Accuracy**: High-resolution images with clear details, accurately reflecting how the product fits and displays color and style naturally.
@@ -61,11 +73,15 @@ The AI will automatically generate realistic and vivid images of the customer we
 Available on every page, users can interact with the AI chatbot located at the bottom right corner. Users can input requests such as product
 inquiries, statistical chart creation, or actions like adding products to the cart and searching for items.
 
-![Virtual Model Image Generation](/assets/chapter_5/5.9.png)
+![Virtual Model Image Generation](https://res.cloudinary.com/dgsrxvev1/image/upload/v1726484821/vagoda/Screenshot_2024-09-16_180322_kpzxoj.png)
 
-![Virtual Model Image Generation](/assets/chapter_5/5.10.png)
+![Virtual Model Image Generation](https://res.cloudinary.com/dgsrxvev1/image/upload/v1726484820/vagoda/Screenshot_2024-09-16_180424_dckrfs.png)
 
-![Virtual Model Image Generation](/assets/chapter_5/5.11.png)
+![Virtual Model Image Generation](https://res.cloudinary.com/dgsrxvev1/image/upload/v1726484820/vagoda/Screenshot_2024-09-16_180512_amwwyw.png)
+
+![chat-bot](https://res.cloudinary.com/dgsrxvev1/image/upload/v1726484819/vagoda/Screenshot_2024-09-16_180600_cnkus0.png)
+
+![chat-bot](https://res.cloudinary.com/dgsrxvev1/image/upload/v1726484819/vagoda/Screenshot_2024-09-16_180610_mctrnl.png)
 
 Chatbot will process requests and respond immediately, providing information or performing actions as requested.
 
