--- a/pages/conclusion/conclusion.mdx
+++ b/pages/conclusion/conclusion.mdx
@@ -47,7 +47,7 @@ select products from their cart.
 
 ![Virtual Model Image Generation](/assets/chapter_5/5.5.png)
 
-![https://res.cloudinary.com/dgsrxvev1/image/upload/v1726416410/vagoda/Screenshot_2024-09-15_224611_ygn3nf.png)
+![vto](https://res.cloudinary.com/dgsrxvev1/image/upload/v1726416410/vagoda/Screenshot_2024-09-15_224611_ygn3nf.png)
 
 ![Virtual Model Image Generation](https://res.cloudinary.com/dgsrxvev1/image/upload/v1726416411/vagoda/Screenshot_2024-09-15_224654_m8k2fw.png)
 
