--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -16,6 +16,7 @@ import { Card, Cards } from "nextra/components";
   <Card title="Overview" href="/overview" />
   <Card title="Experiment & Theory" href="/explore" />
   <Card title="Solution & Application Developement" href="/application" />
+  <Card title="Achievement" href="/conclusion" />
   <Card title="Future Directions" href="/future-direction" />
   <Card title="Reference" href="/reference" />
 </Cards>
